--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ footer p {
   color:var(--red);
   text-transform: uppercase;
   padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
   text-align: center;
 }
 
@@ -248,6 +248,11 @@ hr::after {
   -webkit-box-shadow: 5px 5px 5px var(--shadow);
 }
 
+.details{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 /*ID STYLES*/
 #profile {
   display: flex;
@@ -266,6 +271,7 @@ hr::after {
 }
 
 #profile p{
+  padding: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -303,114 +309,6 @@ hr::after {
 }
 
 
-/**** ALL CSS BELOW USED TO STYLE TEXT FORMS FROM MATERILIZE.CSS INCLUDED IN CSS FOLDER******/
-
-/* Text inputs */
-input:not([type]),
-input[type=text]:not(.browser-default),
-input[type=password]:not(.browser-default),
-input[type=email]:not(.browser-default),
-input[type=url]:not(.browser-default),
-input[type=time]:not(.browser-default),
-input[type=date]:not(.browser-default),
-input[type=datetime]:not(.browser-default),
-input[type=datetime-local]:not(.browser-default),
-input[type=tel]:not(.browser-default),
-input[type=number]:not(.browser-default),
-input[type=search]:not(.browser-default),
-
-textarea.materialize-textarea {
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid var(--red);
-  border-radius: 0;
-  outline: none;
-  height: 2rem;
-  width: 100%;
-  font-size: 16px;
-  margin: 0 0 8px 0;
-  padding: 40px 0px 0px 0px;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  -webkit-transition: border .3s, -webkit-box-shadow .3s;
-  transition: border .3s, -webkit-box-shadow .3s;
-  transition: box-shadow .3s, border .3s;
-  transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
-}
-
-.input-field {
-  position: relative;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.input-field.inline {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 5px;
-}
-
-.input-field.inline input,
-.input-field.inline .select-dropdown {
-  margin-bottom: 1rem;
-}
-
-.input-field.col .prefix ~ label,
-.input-field.col .prefix ~ .validate ~ label {
-  width: calc(100% - 3rem - 1.5rem);
-}
-
-.input-field > label {
-  color: var(--dark-gray-text);
-  position: absolute;
-  top: 10;
-  left: 0;
-  font-size: 1rem;
-  cursor: text;
-  -webkit-transition: color .2s ease-out, -webkit-transform .2s ease-out;
-  transition: color .2s ease-out, -webkit-transform .2s ease-out;
-  transition: transform .2s ease-out, color .2s ease-out;
-  transition: transform .2s ease-out, color .2s ease-out, -webkit-transform .2s ease-out;
-  -webkit-transform-origin: 0% 100%;
-          transform-origin: 0% 100%;
-  text-align: initial;
-  -webkit-transform: translateY(12px);
-          transform: translateY(12px);
-}
-
-.input-field > label:not(.label-icon).active {
-  -webkit-transform: translateY(-14px) scale(0.8);
-          transform: translateY(-14px) scale(0.8);
-  -webkit-transform-origin: 0 0;
-          transform-origin: 0 0;
-}
-
-/* Textarea */
-textarea {
-  width: 100%;
-  height: 3rem;
-  background-color: transparent;
-}
-
-textarea.materialize-textarea {
-  line-height: normal;
-  overflow-y: hidden;
-  /* prevents scroll bar flash */
-  padding: 50px 0 0 0;
-  /* prevents text jump on Enter keypress */
-  resize: none;
-  min-height: 5rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-/* Character Counter */
-.character-counter {
-  min-height: 18px;
-}
-
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 1024px) {
@@ -440,7 +338,7 @@ textarea.materialize-textarea {
     padding-top: 0px;
   }
   footer p{
-    padding-bottom: 30px;
+    padding-bottom: 50px;
   }
   button{
     padding-bottom: 30px;
@@ -485,9 +383,6 @@ textarea.materialize-textarea {
   #contact{
     padding-top: 20px;
   }
-  #contact p{
-    display: none;
-  }
 }
 
 @media screen and (max-width: 500px) {
@@ -505,9 +400,7 @@ textarea.materialize-textarea {
   section p{
     font-size: 20px;
     line-height: 36px;
-  }
-  .first-featured-work{
-    width: 350px;
+    text-align: center;
   }
   .first-featured-work img{
     height: 200px;
